# Gatekeepr

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
apps/: __init__.py  config.py
apps/authentication/: __init__.py  models.py  routes.py
apps/home/: routes.py  twofa.py
apps/static/assets/css/: column-label-fixes.css
apps/static/assets/js/: dark-mode-handler.js
apps/templates/accounts/: login.html  register.html
apps/templates/home/: otp-container.html  otp.html  page-403.html  page-404.html  page-500.html  saved-otp-container.html
apps/templates/includes/: footer-fullscreen.html  footer.html  navigation-fullscreen.html  navigation.html  scripts.html  sidebar.html
apps/templates/layouts/: base-fullscreen.html  base.html
