[project]
name = "GateKeepr"
version = "0.1.0"
description = "GateKeepr enables 2FA generation that is not tied to a device. login anywhere to access 2FA OTPs to login to your apps."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-minify>=0.49",
    "flask-restx>=1.3.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.5",
    "pyotp>=2.9.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
]
